# mimalloc_rust

./: .gitmodules  Cargo.toml  LICENSE-MIT  LICENSE-MIT.orig  build.rs
src/: extended.rs  lib.rs
