[package]
name = "memapi-mimalloc-sys"
#         own ver+mimalloc ver-commit hash
version = "0.1.0+3.1.5-g70d4102f48dce2d5755e9139a15eeec606f97bff"
edition = "2018"
rust-version = "1.56"
repository = "https://github.com/echohumm/mimalloc_rust"
license = "MIT OR Apache-2.0"
description = "FFI bindings to MiMalloc made for memapi."
build = "build.rs"
links = "mimalloc"
exclude = [
    "/c/bin",
    "/c/cmake",
    "/c/doc",
    "/c/docs",
    "/c/ide",
    "/c/test",
]

[dependencies]
libc = "^0.2"

[build-dependencies]
cc = "^1.0.94"

[features]
secure = []
debug = []
debug_in_debug = []
override = []
extended = []
arena = []
local_dynamic_tls = []
no_thp = []

[package.metadata.docs.rs]
features = ["extended"]