# This repo is a slighly modified version of purpleprotocol/mimalloc-rust

[package]
name = "memapi-mimalloc-sys"
#         own ver+mimalloc ver-commits past ver-commit hash
version = "0.1.3+3.1.5-1-g09a27098aa6e9286518bd9c74e6ffa7199c3f04e"
edition = "2018"
rust-version = "1.56"
repository = "https://github.com/echohumm/mimalloc_rust"
license = "MIT OR Apache-2.0"
description = "FFI bindings to MiMalloc made for memapi."
build = "build.rs"
links = "mimalloc"
exclude = [
    "/c/bin",
    "/c/cmake",
    "/c/doc",
    "/c/docs",
    "/c/ide",
    "/c/test",
]

[dependencies]
libc = { version = "^0.2.106", default-features = false }

[build-dependencies]
cc = "^1.0.92"

[features]
secure = []
debug = []
debug_in_debug = []
override = []
extended = []
arena = []
local_dynamic_tls = []
no_thp = []

[package.metadata.docs.rs]
features = ["extended"]
